# perfed

./: .gitignore  LICENSE  README.md  demo.ipynb  main.py  pyproject.toml
.github/workflows/: check.yaml  ci.yaml  publish.yaml
perfed/: timer_manager.py  timers.py  util.py
src/perfed/: timer.py  timer_decorator.py  timer_manager.py  util.py
src/scripts/: check.py  lint.py  test.py
tests/: test_timer.py  test_timer_decorator.py  test_timer_manager.py  test_util.py  util.py
