[project]
name = "perfed"
version = "0.1.1"
authors = [
  {name = "Enze Soh", email = "enzesoh@gmail.com"},
]
description = "Simplified performance timers in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/sohenze/perfed"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a8",
    "types-tabulate>=0.9.0.20241207",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "I", "A", "B", "COM", "C4", "Q", "RSE", "RET", "ARG"]
